# Podcast-Frequency-List

./: .env.example  .gitignore  README.md  pyproject.toml
data/: show_manifest.csv
docs/: cli-utilities.md  corpus-expansion-scaffolding.md  dev-steps.md  preliminary-software-architecture.md  project-plan.md  token-generation-design.md
plans/: current-dev-step.md
scripts/: bootstrap_shows_from_manifest.py  create_slices_from_manifest.py  process_slices_from_manifest.py  review_corpus_milestone.py
src/podcast_frequency_list/: cli.py  cli_output.py  config.py  corpus_review.py  db.py  feed_parsing.py  schema.sql  show_bootstrap.py  show_manifest.py  show_processing.py  show_slices.py  transcript_scope.py
src/podcast_frequency_list/asr/: __init__.py  audio.py  client.py  models.py  service.py
src/podcast_frequency_list/cli/: __init__.py  emitters.py  field_specs.py  handlers.py  output.py  runtime.py  service_factories.py
src/podcast_frequency_list/discovery/: __init__.py  common.py  models.py  (+3 more)
tests/: test_asr.py  test_candidate_inventory.py  test_candidate_metrics.py  test_candidate_scores.py  test_candidate_spans.py  test_cli.py  test_config.py  test_corpus_review.py  test_db.py  test_discovery.py  test_ingest.py  test_normalize.py  test_pilot.py  test_qc.py  test_sentences.py  test_show_bootstrap.py  test_show_manifest.py  test_show_processing.py  test_show_slices.py  test_tokens.py
tests/candidate_metrics/: _helpers.py  test_association.py  test_boundary.py  test_containment.py  test_identity.py  test_refresh.py  test_specificity.py  test_summary.py
(+53 files in other folders)
