[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "podcast-frequency-list"
version = "0.1.0"
description = "Build a spoken French frequency deck from podcast transcripts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0,<7.0",
  "httpx>=0.28,<0.29",
  "typer>=0.12,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
podfreq = "podcast_frequency_list.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_frequency_list"]

[tool.hatch.build.targets.wheel.force-include]
"src/podcast_frequency_list/schema.sql" = "podcast_frequency_list/schema.sql"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
